--- a/css/parallax.css
+++ b/css/parallax.css
@@ -7,12 +7,6 @@
         overflow-y: overlay;
         perspective: 2px;
         transform-style: preserve-3d;
-        -moz-transform-style: preserve-3d;
-    }
-
-    main * {
-        transform-style: inherit;
-        -moz-transform-style: inherit;
     }
 
     .section::before {
